// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> Should render and match the snapshot with intervention path 1`] = `
.c13 {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  background-color: #107969;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
  position: relative;
  cursor: pointer;
}

.c0 {
  position: fixed;
  width: 100%;
  top: 0;
  background-color: white;
  padding: 20px;
  box-shadow: 0px 4px 10px rgba(227,238,251,0.8);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 10;
  height: 70px;
}

.c11 {
  margin-left: auto;
  margin-right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  width: auto;
  height: auto;
}

.c6 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  margin: 25px 10px;
}

.c8 {
  margin: 0 10px;
  padding-bottom: 10px;
  border-bottom-width: 2px;
  border-bottom-color: #C866EA;
  border-bottom-style: none;
}

.c8 div {
  cursor: pointer;
}

.c8 a {
  color: #2F3850;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 a:visited,
.c8 a:hover {
  color: #2F3850;
}

.c9 {
  margin: 0 10px;
  padding-bottom: 10px;
  border-bottom-width: 2px;
  border-bottom-color: #C866EA;
  border-bottom-style: solid;
}

.c9 div {
  cursor: pointer;
}

.c9 a {
  color: #2F3850;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 a:visited,
.c9 a:hover {
  color: #2F3850;
}

.c5 {
  padding: 12px;
  border: 1px solid #E9F1FB;
  border-radius: 10px;
  width: 259px;
  max-width: 800px;
  padding-top: 6px;
  padding-bottom: 6px;
  padding-right: 12px;
  padding-left: 12px;
  font-size: 23px;
  background-color: transparent;
  border: 1px solid transparent;
}

.c5:focus {
  box-shadow: none;
  outline: none;
  border: 1px solid #107969;
}

.c3 {
  height: 28px;
  width: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  background: #E9F1FB;
  margin-right: 35px;
  cursor: pointer;
}

<div
  class="c0"
>
  <div
    class="c1"
    width="100%"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <img
          alt="cross"
          class="c4"
          src="IMAGE_MOCK"
        />
      </div>
      <input
        class="c5"
        font-size="23"
        placeholder="e-Intervention Name"
        type="text"
        value="e-Intervention New"
        width="259px"
      />
    </div>
    <div
      class="c6"
      display="flex"
    >
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <div>
            <a
              href="/interventions/12dasc0123=21-2/edit"
            >
              Screens Content
            </a>
          </div>
        </div>
        <div
          class="c8"
        >
          <div>
            <a
              href="/interventions/12dasc0123=21-2/settings"
            >
              General Settings
            </a>
          </div>
        </div>
        <div
          class="c9"
        >
          <div>
            <a
              href="/"
            >
              Manage Sharing
            </a>
          </div>
        </div>
      </div>
      <div
        class="c10"
      />
    </div>
    <div />
  </div>
  <div
    class="c11"
  >
    <div
      class="c12"
    >
      <div
        class="c13"
      >
        <div>
          TT
        </div>
      </div>
    </div>
    test test
  </div>
</div>
`;

exports[`<Navbar /> Should render and match the snapshot withou matching path 1`] = `
.c3 {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  background-color: #107969;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
  position: relative;
  cursor: pointer;
}

.c0 {
  position: fixed;
  width: 100%;
  top: 0;
  background-color: white;
  padding: 20px;
  box-shadow: 0px 4px 10px rgba(227,238,251,0.8);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 10;
  height: 70px;
}

.c1 {
  margin-left: auto;
  margin-right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div>
          TT
        </div>
      </div>
    </div>
    test test
  </div>
</div>
`;
